tests/ui/typeck/issue-13853-5.stderr
error[E0207]: the type parameter `T` is not constrained by the impl trait, self type, or predicates
  --> $DIR/issue-13853-5.rs:7:10
   |
LL | impl<'a, T: Deserializable> Deserializable for &'a str {
   |          ^ unconstrained type parameter
   |
help: Either remove the type parameter 'T' or make use of it, for example ` for S<T>`.
   |
LL - impl<'a, T: Deserializable> Deserializable for &'a str {
LL + impl<'a, : Deserializable> Deserializable for &'a str {
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0207`.
